--- a/services/config-server/src/main/resources/configurations/gateway-service.yaml
+++ b/services/config-server/src/main/resources/configurations/gateway-service.yaml
@@ -11,22 +11,22 @@ spring:
               enabled: true
           routes:
             - id: customer-service
-              uri: lb://CUSTOMER-SERVICE
+              uri: lb:http://CUSTOMER-SERVICE
               predicates:
                 - Path=/api/v1/customers/**
             - id: order-service
-              uri: lb://ORDER-SERVICE
+              uri: lb:http://ORDER-SERVICE
               predicates:
                 - Path=/api/v1/orders/**
             - id: order-lines-service
-              uri: lb://ORDER-SERVICE
+              uri: lb:http://ORDER-SERVICE
               predicates:
                 - Path=/api/v1/order-lines/**
             - id: product-service
-              uri: lb://PRODUCT-SERVICE
+              uri: lb:http://PRODUCT-SERVICE
               predicates:
-                - Path=/api/v1/products-lines/**
+                - Path=/api/v1/products/**
             - id: payment-service
-              uri: lb://PAYMENT-SERVICE
+              uri: lb:http://PAYMENT-SERVICE
               predicates:
                 - Path=/api/v1/payments/**
